[gd_scene load_steps=5 format=3 uid="uid://bovtnvsow7pbl"]

[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_wry0c"]
[ext_resource type="Theme" uid="uid://y0b8mwiojt3f" path="res://dark_theme.tres" id="2_53xxs"]

[sub_resource type="CanvasTexture" id="CanvasTexture_4ntc7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bbldp"]
texture = SubResource("CanvasTexture_4ntc7")
modulate_color = Color(0.658824, 0.137255, 0.172549, 0.368627)

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wry0c")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bbldp")

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Pause"

[node name="ButtonReturn" type="Button" parent="MarginContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_53xxs")
text = "Return"

[node name="ButtonQuit" type="Button" parent="MarginContainer/Panel/CenterContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_53xxs")
text = "Quit"

[connection signal="pressed" from="MarginContainer/Panel/CenterContainer/VBoxContainer/ButtonReturn" to="." method="_on_button_return_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/CenterContainer/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
